// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Leads Snapshots > renders leads empty state - snapshot 1`] = `
<div>
  <div
    class="space-y-6"
  >
    <div
      class="flex items-start justify-between"
    >
      <div>
        <h1
          class="text-2xl font-semibold tracking-tight"
        >
          Pipeline
        </h1>
        <p
          class="text-sm text-muted-foreground"
        >
          0
           leads en el pipeline
        </p>
      </div>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 rounded-md h-9 px-4"
      >
        <svg
          class="lucide lucide-plus w-4 h-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Nuevo Lead
      </button>
    </div>
    <div
      class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-6 gap-3"
    >
      <button
        class="flex flex-col items-center gap-1 p-3 rounded-xl border transition-all duration-150 cursor-pointer hover:shadow-md border-border/50 bg-card/50 hover:border-border"
      >
        <span
          class="text-xl"
        >
          🆕
        </span>
        <span
          class="text-2xl font-bold tabular-nums text-gray-400"
        >
          0
        </span>
        <span
          class="text-xs text-muted-foreground"
        >
          Nuevos
        </span>
      </button>
      <button
        class="flex flex-col items-center gap-1 p-3 rounded-xl border transition-all duration-150 cursor-pointer hover:shadow-md border-border/50 bg-card/50 hover:border-border"
      >
        <span
          class="text-xl"
        >
          💙
        </span>
        <span
          class="text-2xl font-bold tabular-nums text-blue-500"
        >
          0
        </span>
        <span
          class="text-xs text-muted-foreground"
        >
          Amigos
        </span>
      </button>
      <button
        class="flex flex-col items-center gap-1 p-3 rounded-xl border transition-all duration-150 cursor-pointer hover:shadow-md border-border/50 bg-card/50 hover:border-border"
      >
        <span
          class="text-xl"
        >
          🤝
        </span>
        <span
          class="text-2xl font-bold tabular-nums text-amber-500"
        >
          0
        </span>
        <span
          class="text-xs text-muted-foreground"
        >
          Colaboradores
        </span>
      </button>
      <button
        class="flex flex-col items-center gap-1 p-3 rounded-xl border transition-all duration-150 cursor-pointer hover:shadow-md border-border/50 bg-card/50 hover:border-border"
      >
        <span
          class="text-xl"
        >
          🔥
        </span>
        <span
          class="text-2xl font-bold tabular-nums text-red-500"
        >
          0
        </span>
        <span
          class="text-xs text-muted-foreground"
        >
          Calientes
        </span>
      </button>
      <button
        class="flex flex-col items-center gap-1 p-3 rounded-xl border transition-all duration-150 cursor-pointer hover:shadow-md border-border/50 bg-card/50 hover:border-border"
      >
        <span
          class="text-xl"
        >
          ✅
        </span>
        <span
          class="text-2xl font-bold tabular-nums text-green-500"
        >
          0
        </span>
        <span
          class="text-xs text-muted-foreground"
        >
          Clientes
        </span>
      </button>
      <button
        class="flex flex-col items-center gap-1 p-3 rounded-xl border transition-all duration-150 cursor-pointer hover:shadow-md border-border/50 bg-card/50 hover:border-border"
      >
        <span
          class="text-xl"
        >
          ❄️
        </span>
        <span
          class="text-2xl font-bold tabular-nums text-cyan-500"
        >
          0
        </span>
        <span
          class="text-xs text-muted-foreground"
        >
          Fríos
        </span>
      </button>
    </div>
    <div
      class="rounded-xl border border-border/50 bg-card/50 overflow-hidden"
    >
      <div
        class="grid grid-cols-[1fr_80px] md:grid-cols-[1fr_200px_100px_80px] gap-4 px-4 py-2.5 border-b border-border/30 text-xs text-muted-foreground uppercase tracking-wide"
      >
        <span>
          Contacto
        </span>
        <span
          class="hidden md:block"
        >
          Último mensaje
        </span>
        <span
          class="hidden md:block"
        >
          Tipo
        </span>
        <span
          class="text-right"
        >
          Tiempo
        </span>
      </div>
      <div
        class="text-center py-16 text-muted-foreground/40 text-sm"
      >
        Sin leads
      </div>
    </div>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Leads Snapshots > renders leads error state - snapshot 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center h-[60vh] gap-3"
  >
    <svg
      class="lucide lucide-circle-alert w-8 h-8 text-destructive/70"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    <p
      class="text-sm text-muted-foreground"
    >
      No se pudieron cargar los leads
    </p>
    <p
      class="text-xs text-destructive/70"
    >
      Error
    </p>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Leads Snapshots > renders leads loading state - snapshot 1`] = `
<div>
  <div
    class="space-y-4 p-4"
  >
    <div
      class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-6 gap-3"
    >
      <div
        class="flex flex-col items-center gap-2 p-3 rounded-xl border border-border/30 bg-card/30"
      >
        <div
          class="w-8 h-8 rounded-full bg-muted/40 animate-pulse"
        />
        <div
          class="w-10 h-6 rounded bg-muted/40 animate-pulse"
        />
        <div
          class="w-16 h-3 rounded bg-muted/30 animate-pulse"
        />
      </div>
      <div
        class="flex flex-col items-center gap-2 p-3 rounded-xl border border-border/30 bg-card/30"
      >
        <div
          class="w-8 h-8 rounded-full bg-muted/40 animate-pulse"
        />
        <div
          class="w-10 h-6 rounded bg-muted/40 animate-pulse"
        />
        <div
          class="w-16 h-3 rounded bg-muted/30 animate-pulse"
        />
      </div>
      <div
        class="flex flex-col items-center gap-2 p-3 rounded-xl border border-border/30 bg-card/30"
      >
        <div
          class="w-8 h-8 rounded-full bg-muted/40 animate-pulse"
        />
        <div
          class="w-10 h-6 rounded bg-muted/40 animate-pulse"
        />
        <div
          class="w-16 h-3 rounded bg-muted/30 animate-pulse"
        />
      </div>
      <div
        class="flex flex-col items-center gap-2 p-3 rounded-xl border border-border/30 bg-card/30"
      >
        <div
          class="w-8 h-8 rounded-full bg-muted/40 animate-pulse"
        />
        <div
          class="w-10 h-6 rounded bg-muted/40 animate-pulse"
        />
        <div
          class="w-16 h-3 rounded bg-muted/30 animate-pulse"
        />
      </div>
      <div
        class="flex flex-col items-center gap-2 p-3 rounded-xl border border-border/30 bg-card/30"
      >
        <div
          class="w-8 h-8 rounded-full bg-muted/40 animate-pulse"
        />
        <div
          class="w-10 h-6 rounded bg-muted/40 animate-pulse"
        />
        <div
          class="w-16 h-3 rounded bg-muted/30 animate-pulse"
        />
      </div>
      <div
        class="flex flex-col items-center gap-2 p-3 rounded-xl border border-border/30 bg-card/30"
      >
        <div
          class="w-8 h-8 rounded-full bg-muted/40 animate-pulse"
        />
        <div
          class="w-10 h-6 rounded bg-muted/40 animate-pulse"
        />
        <div
          class="w-16 h-3 rounded bg-muted/30 animate-pulse"
        />
      </div>
    </div>
    <div
      class="rounded-xl border border-border/30 bg-card/30 overflow-hidden"
    >
      <div
        class="h-10 border-b border-border/20 bg-muted/10"
      />
      <div
        class="flex items-center gap-3 px-4 py-3 border-b border-border/10"
      >
        <div
          class="w-9 h-9 rounded-full bg-muted/40 animate-pulse shrink-0"
        />
        <div
          class="flex-1 space-y-1.5"
        >
          <div
            class="w-32 h-4 rounded bg-muted/40 animate-pulse"
          />
          <div
            class="w-20 h-3 rounded bg-muted/30 animate-pulse"
          />
        </div>
        <div
          class="hidden md:block w-40 h-3 rounded bg-muted/30 animate-pulse"
        />
        <div
          class="w-12 h-3 rounded bg-muted/30 animate-pulse"
        />
      </div>
      <div
        class="flex items-center gap-3 px-4 py-3 border-b border-border/10"
      >
        <div
          class="w-9 h-9 rounded-full bg-muted/40 animate-pulse shrink-0"
        />
        <div
          class="flex-1 space-y-1.5"
        >
          <div
            class="w-32 h-4 rounded bg-muted/40 animate-pulse"
          />
          <div
            class="w-20 h-3 rounded bg-muted/30 animate-pulse"
          />
        </div>
        <div
          class="hidden md:block w-40 h-3 rounded bg-muted/30 animate-pulse"
        />
        <div
          class="w-12 h-3 rounded bg-muted/30 animate-pulse"
        />
      </div>
      <div
        class="flex items-center gap-3 px-4 py-3 border-b border-border/10"
      >
        <div
          class="w-9 h-9 rounded-full bg-muted/40 animate-pulse shrink-0"
        />
        <div
          class="flex-1 space-y-1.5"
        >
          <div
            class="w-32 h-4 rounded bg-muted/40 animate-pulse"
          />
          <div
            class="w-20 h-3 rounded bg-muted/30 animate-pulse"
          />
        </div>
        <div
          class="hidden md:block w-40 h-3 rounded bg-muted/30 animate-pulse"
        />
        <div
          class="w-12 h-3 rounded bg-muted/30 animate-pulse"
        />
      </div>
      <div
        class="flex items-center gap-3 px-4 py-3 border-b border-border/10"
      >
        <div
          class="w-9 h-9 rounded-full bg-muted/40 animate-pulse shrink-0"
        />
        <div
          class="flex-1 space-y-1.5"
        >
          <div
            class="w-32 h-4 rounded bg-muted/40 animate-pulse"
          />
          <div
            class="w-20 h-3 rounded bg-muted/30 animate-pulse"
          />
        </div>
        <div
          class="hidden md:block w-40 h-3 rounded bg-muted/30 animate-pulse"
        />
        <div
          class="w-12 h-3 rounded bg-muted/30 animate-pulse"
        />
      </div>
      <div
        class="flex items-center gap-3 px-4 py-3 border-b border-border/10"
      >
        <div
          class="w-9 h-9 rounded-full bg-muted/40 animate-pulse shrink-0"
        />
        <div
          class="flex-1 space-y-1.5"
        >
          <div
            class="w-32 h-4 rounded bg-muted/40 animate-pulse"
          />
          <div
            class="w-20 h-3 rounded bg-muted/30 animate-pulse"
          />
        </div>
        <div
          class="hidden md:block w-40 h-3 rounded bg-muted/30 animate-pulse"
        />
        <div
          class="w-12 h-3 rounded bg-muted/30 animate-pulse"
        />
      </div>
      <div
        class="flex items-center gap-3 px-4 py-3 border-b border-border/10"
      >
        <div
          class="w-9 h-9 rounded-full bg-muted/40 animate-pulse shrink-0"
        />
        <div
          class="flex-1 space-y-1.5"
        >
          <div
            class="w-32 h-4 rounded bg-muted/40 animate-pulse"
          />
          <div
            class="w-20 h-3 rounded bg-muted/30 animate-pulse"
          />
        </div>
        <div
          class="hidden md:block w-40 h-3 rounded bg-muted/30 animate-pulse"
        />
        <div
          class="w-12 h-3 rounded bg-muted/30 animate-pulse"
        />
      </div>
      <div
        class="flex items-center gap-3 px-4 py-3 border-b border-border/10"
      >
        <div
          class="w-9 h-9 rounded-full bg-muted/40 animate-pulse shrink-0"
        />
        <div
          class="flex-1 space-y-1.5"
        >
          <div
            class="w-32 h-4 rounded bg-muted/40 animate-pulse"
          />
          <div
            class="w-20 h-3 rounded bg-muted/30 animate-pulse"
          />
        </div>
        <div
          class="hidden md:block w-40 h-3 rounded bg-muted/30 animate-pulse"
        />
        <div
          class="w-12 h-3 rounded bg-muted/30 animate-pulse"
        />
      </div>
      <div
        class="flex items-center gap-3 px-4 py-3 border-b border-border/10"
      >
        <div
          class="w-9 h-9 rounded-full bg-muted/40 animate-pulse shrink-0"
        />
        <div
          class="flex-1 space-y-1.5"
        >
          <div
            class="w-32 h-4 rounded bg-muted/40 animate-pulse"
          />
          <div
            class="w-20 h-3 rounded bg-muted/30 animate-pulse"
          />
        </div>
        <div
          class="hidden md:block w-40 h-3 rounded bg-muted/30 animate-pulse"
        />
        <div
          class="w-12 h-3 rounded bg-muted/30 animate-pulse"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Leads Snapshots > renders leads pipeline - snapshot 1`] = `
<div>
  <div
    class="space-y-6"
  >
    <div
      class="flex items-start justify-between"
    >
      <div>
        <h1
          class="text-2xl font-semibold tracking-tight"
        >
          Pipeline
        </h1>
        <p
          class="text-sm text-muted-foreground"
        >
          4
           leads en el pipeline
        </p>
      </div>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 rounded-md h-9 px-4"
      >
        <svg
          class="lucide lucide-plus w-4 h-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Nuevo Lead
      </button>
    </div>
    <div
      class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-6 gap-3"
    >
      <button
        class="flex flex-col items-center gap-1 p-3 rounded-xl border transition-all duration-150 cursor-pointer hover:shadow-md border-border/50 bg-card/50 hover:border-border"
      >
        <span
          class="text-xl"
        >
          🆕
        </span>
        <span
          class="text-2xl font-bold tabular-nums text-gray-400"
        >
          0
        </span>
        <span
          class="text-xs text-muted-foreground"
        >
          Nuevos
        </span>
      </button>
      <button
        class="flex flex-col items-center gap-1 p-3 rounded-xl border transition-all duration-150 cursor-pointer hover:shadow-md border-border/50 bg-card/50 hover:border-border"
      >
        <span
          class="text-xl"
        >
          💙
        </span>
        <span
          class="text-2xl font-bold tabular-nums text-blue-500"
        >
          0
        </span>
        <span
          class="text-xs text-muted-foreground"
        >
          Amigos
        </span>
      </button>
      <button
        class="flex flex-col items-center gap-1 p-3 rounded-xl border transition-all duration-150 cursor-pointer hover:shadow-md border-border/50 bg-card/50 hover:border-border"
      >
        <span
          class="text-xl"
        >
          🤝
        </span>
        <span
          class="text-2xl font-bold tabular-nums text-amber-500"
        >
          0
        </span>
        <span
          class="text-xs text-muted-foreground"
        >
          Colaboradores
        </span>
      </button>
      <button
        class="flex flex-col items-center gap-1 p-3 rounded-xl border transition-all duration-150 cursor-pointer hover:shadow-md border-border/50 bg-card/50 hover:border-border"
      >
        <span
          class="text-xl"
        >
          🔥
        </span>
        <span
          class="text-2xl font-bold tabular-nums text-red-500"
        >
          0
        </span>
        <span
          class="text-xs text-muted-foreground"
        >
          Calientes
        </span>
      </button>
      <button
        class="flex flex-col items-center gap-1 p-3 rounded-xl border transition-all duration-150 cursor-pointer hover:shadow-md border-border/50 bg-card/50 hover:border-border"
      >
        <span
          class="text-xl"
        >
          ✅
        </span>
        <span
          class="text-2xl font-bold tabular-nums text-green-500"
        >
          0
        </span>
        <span
          class="text-xs text-muted-foreground"
        >
          Clientes
        </span>
      </button>
      <button
        class="flex flex-col items-center gap-1 p-3 rounded-xl border transition-all duration-150 cursor-pointer hover:shadow-md border-border/50 bg-card/50 hover:border-border"
      >
        <span
          class="text-xl"
        >
          ❄️
        </span>
        <span
          class="text-2xl font-bold tabular-nums text-cyan-500"
        >
          0
        </span>
        <span
          class="text-xs text-muted-foreground"
        >
          Fríos
        </span>
      </button>
    </div>
    <div
      class="rounded-xl border border-border/50 bg-card/50 overflow-hidden"
    >
      <div
        class="grid grid-cols-[1fr_80px] md:grid-cols-[1fr_200px_100px_80px] gap-4 px-4 py-2.5 border-b border-border/30 text-xs text-muted-foreground uppercase tracking-wide"
      >
        <span>
          Contacto
        </span>
        <span
          class="hidden md:block"
        >
          Último mensaje
        </span>
        <span
          class="hidden md:block"
        >
          Tipo
        </span>
        <span
          class="text-right"
        >
          Tiempo
        </span>
      </div>
      <div
        class="divide-y divide-border/20"
      >
        <div
          class="group grid grid-cols-[1fr_80px] md:grid-cols-[1fr_200px_100px_80px] gap-4 px-4 py-3 items-center cursor-pointer transition-all duration-150 hover:bg-muted/30"
          draggable="true"
        >
          <div
            class="flex items-center gap-3 min-w-0"
          >
            <div
              class="relative shrink-0"
            >
              <button
                class="w-9 h-9 rounded-full overflow-hidden hover:ring-2 hover:ring-violet-500 cursor-pointer"
                title="Abrir @hotlead"
              >
                <div
                  class="w-full h-full bg-gradient-to-br flex items-center justify-center text-white text-[10px] font-medium from-violet-600 to-purple-600"
                >
                  HL
                </div>
              </button>
              <span
                class="absolute -bottom-0.5 -right-0.5 w-3 h-3 rounded-full border-2 border-card bg-red-500"
              />
            </div>
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="font-medium text-sm truncate"
              >
                Hot Lead
              </p>
              <p
                class="text-xs text-muted-foreground truncate flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-instagram w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="20"
                    rx="5"
                    ry="5"
                    width="20"
                    x="2"
                    y="2"
                  />
                  <path
                    d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"
                  />
                  <line
                    x1="17.5"
                    x2="17.51"
                    y1="6.5"
                    y2="6.5"
                  />
                </svg>
                @
                Hot Lead
              </p>
            </div>
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-7 w-7 opacity-0 group-hover:opacity-100 transition-opacity shrink-0"
              data-state="closed"
              id="radix-:r0:"
              type="button"
            >
              <svg
                class="lucide lucide-ellipsis w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="5"
                  cy="12"
                  r="1"
                />
              </svg>
            </button>
          </div>
          <span
            class="hidden md:block text-xs text-muted-foreground truncate"
          >
            —
          </span>
          <span
            class="hidden md:block"
          >
            <span
              style="color: rgb(156, 163, 175); background-color: rgba(156, 163, 175, 0.125); padding: 2px 8px; border-radius: 9999px; font-size: 11px; font-weight: 600; white-space: nowrap;"
            >
              Nuevo
            </span>
          </span>
          <span
            class="text-xs text-muted-foreground text-right flex items-center justify-end gap-1"
          >
            <svg
              class="lucide lucide-clock w-3 h-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <polyline
                points="12 6 12 12 16 14"
              />
            </svg>
            —
          </span>
        </div>
        <div
          class="group grid grid-cols-[1fr_80px] md:grid-cols-[1fr_200px_100px_80px] gap-4 px-4 py-3 items-center cursor-pointer transition-all duration-150 hover:bg-muted/30"
          draggable="true"
        >
          <div
            class="flex items-center gap-3 min-w-0"
          >
            <div
              class="relative shrink-0"
            >
              <button
                class="w-9 h-9 rounded-full overflow-hidden hover:ring-2 hover:ring-violet-500 cursor-pointer"
                title="Abrir @activelead"
              >
                <div
                  class="w-full h-full bg-gradient-to-br flex items-center justify-center text-white text-[10px] font-medium from-violet-600 to-purple-600"
                >
                  AL
                </div>
              </button>
              <span
                class="absolute -bottom-0.5 -right-0.5 w-3 h-3 rounded-full border-2 border-card bg-blue-500"
              />
            </div>
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="font-medium text-sm truncate"
              >
                Active Lead
              </p>
              <p
                class="text-xs text-muted-foreground truncate flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-instagram w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="20"
                    rx="5"
                    ry="5"
                    width="20"
                    x="2"
                    y="2"
                  />
                  <path
                    d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"
                  />
                  <line
                    x1="17.5"
                    x2="17.51"
                    y1="6.5"
                    y2="6.5"
                  />
                </svg>
                @
                Active Lead
              </p>
            </div>
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-7 w-7 opacity-0 group-hover:opacity-100 transition-opacity shrink-0"
              data-state="closed"
              id="radix-:r2:"
              type="button"
            >
              <svg
                class="lucide lucide-ellipsis w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="5"
                  cy="12"
                  r="1"
                />
              </svg>
            </button>
          </div>
          <span
            class="hidden md:block text-xs text-muted-foreground truncate"
          >
            —
          </span>
          <span
            class="hidden md:block"
          >
            <span
              style="color: rgb(156, 163, 175); background-color: rgba(156, 163, 175, 0.125); padding: 2px 8px; border-radius: 9999px; font-size: 11px; font-weight: 600; white-space: nowrap;"
            >
              Nuevo
            </span>
          </span>
          <span
            class="text-xs text-muted-foreground text-right flex items-center justify-end gap-1"
          >
            <svg
              class="lucide lucide-clock w-3 h-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <polyline
                points="12 6 12 12 16 14"
              />
            </svg>
            —
          </span>
        </div>
        <div
          class="group grid grid-cols-[1fr_80px] md:grid-cols-[1fr_200px_100px_80px] gap-4 px-4 py-3 items-center cursor-pointer transition-all duration-150 hover:bg-muted/30"
          draggable="true"
        >
          <div
            class="flex items-center gap-3 min-w-0"
          >
            <div
              class="relative shrink-0"
            >
              <button
                class="w-9 h-9 rounded-full overflow-hidden cursor-default"
              >
                <div
                  class="w-full h-full bg-gradient-to-br flex items-center justify-center text-white text-[10px] font-medium from-sky-400 to-blue-500"
                >
                  NL
                </div>
              </button>
              <span
                class="absolute -bottom-0.5 -right-0.5 w-3 h-3 rounded-full border-2 border-card bg-gray-400"
              />
            </div>
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="font-medium text-sm truncate"
              >
                New Lead
              </p>
              <p
                class="text-xs text-muted-foreground truncate flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-send w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                  />
                  <path
                    d="m21.854 2.147-10.94 10.939"
                  />
                </svg>
                @
                New Lead
              </p>
            </div>
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-7 w-7 opacity-0 group-hover:opacity-100 transition-opacity shrink-0"
              data-state="closed"
              id="radix-:r4:"
              type="button"
            >
              <svg
                class="lucide lucide-ellipsis w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="5"
                  cy="12"
                  r="1"
                />
              </svg>
            </button>
          </div>
          <span
            class="hidden md:block text-xs text-muted-foreground truncate"
          >
            —
          </span>
          <span
            class="hidden md:block"
          >
            <span
              style="color: rgb(156, 163, 175); background-color: rgba(156, 163, 175, 0.125); padding: 2px 8px; border-radius: 9999px; font-size: 11px; font-weight: 600; white-space: nowrap;"
            >
              Nuevo
            </span>
          </span>
          <span
            class="text-xs text-muted-foreground text-right flex items-center justify-end gap-1"
          >
            <svg
              class="lucide lucide-clock w-3 h-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <polyline
                points="12 6 12 12 16 14"
              />
            </svg>
            —
          </span>
        </div>
        <div
          class="group grid grid-cols-[1fr_80px] md:grid-cols-[1fr_200px_100px_80px] gap-4 px-4 py-3 items-center cursor-pointer transition-all duration-150 hover:bg-muted/30"
          draggable="true"
        >
          <div
            class="flex items-center gap-3 min-w-0"
          >
            <div
              class="relative shrink-0"
            >
              <button
                class="w-9 h-9 rounded-full overflow-hidden hover:ring-2 hover:ring-violet-500 cursor-pointer"
                title="Abrir @customer"
              >
                <div
                  class="w-full h-full bg-gradient-to-br flex items-center justify-center text-white text-[10px] font-medium from-violet-600 to-purple-600"
                >
                  C
                </div>
              </button>
              <span
                class="absolute -bottom-0.5 -right-0.5 w-3 h-3 rounded-full border-2 border-card bg-green-500"
              />
            </div>
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="font-medium text-sm truncate"
              >
                Customer
              </p>
              <p
                class="text-xs text-muted-foreground truncate flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-instagram w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="20"
                    rx="5"
                    ry="5"
                    width="20"
                    x="2"
                    y="2"
                  />
                  <path
                    d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"
                  />
                  <line
                    x1="17.5"
                    x2="17.51"
                    y1="6.5"
                    y2="6.5"
                  />
                </svg>
                @
                Customer
              </p>
            </div>
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-7 w-7 opacity-0 group-hover:opacity-100 transition-opacity shrink-0"
              data-state="closed"
              id="radix-:r6:"
              type="button"
            >
              <svg
                class="lucide lucide-ellipsis w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="5"
                  cy="12"
                  r="1"
                />
              </svg>
            </button>
          </div>
          <span
            class="hidden md:block text-xs text-muted-foreground truncate"
          >
            —
          </span>
          <span
            class="hidden md:block"
          >
            <span
              style="color: rgb(156, 163, 175); background-color: rgba(156, 163, 175, 0.125); padding: 2px 8px; border-radius: 9999px; font-size: 11px; font-weight: 600; white-space: nowrap;"
            >
              Nuevo
            </span>
          </span>
          <span
            class="text-xs text-muted-foreground text-right flex items-center justify-end gap-1"
          >
            <svg
              class="lucide lucide-clock w-3 h-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <polyline
                points="12 6 12 12 16 14"
              />
            </svg>
            —
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;
